--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.7.0",
     "@astrojs/mdx": "^3.0.1",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
-    "@astrojs/check": "^0.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-simply-carousel": "^9.1.6",
     "typescript": "^5.4.5"
   }
 }
